--- a/test cases/common/140 get define/meson.build
+++ b/test cases/common/140 get define/meson.build
@@ -26,6 +26,9 @@ foreach lang : ['c', 'cpp']
     # set.
     d = cc.get_define('__FreeBSD__')
     assert(d != '', '__FreeBSD__ value is unset')
+  elif host_system == 'dragonfly'
+    d = cc.get_define('__DragonFly__')
+    assert(d == '1', '__DragonFly__ value is @0@ instead of 1'.format(d))
   else
     error('Please report a bug and help us improve support for this platform')
   endif
