--- a/test cases/common/140 get define/meson.build
+++ b/test cases/common/140 get define/meson.build
@@ -29,6 +29,9 @@ foreach lang : ['c', 'cpp']
   elif host_system == 'dragonfly'
     d = cc.get_define('__DragonFly__')
     assert(d == '1', '__DragonFly__ value is @0@ instead of 1'.format(d))
+  elif host_system == 'netbsd'
+    d = cc.get_define('__NetBSD__')
+    assert(d == '1', '__NetBSD__ value is @0@ instead of 1'.format(d))
   else
     error('Please report a bug and help us improve support for this platform')
   endif
