tests: don't try to build llvm test if dep is unfound
dragonfly BSD doesn't ship dynamic modules for LLVM so static linking is
required.

--- a/test cases/frameworks/15 llvm/meson.build
+++ b/test cases/frameworks/15 llvm/meson.build
@@ -20,17 +20,19 @@ foreach static : [true, false]
     'llvm',
     modules : ['bitwriter', 'asmprinter', 'executionengine', 'target',
                'mcjit', 'nativecodegen'],
-    required : true,
+    required : false,
     static : static,
   )
-  name = static ? 'static' : 'dynamic'
-  executable(
-    'sum-@0@'.format(name),
-    'sum.c',
-    dependencies : [
-      llvm_dep, dep_tinfo,
-      dependency('zlib'),
-      meson.get_compiler('c').find_library('dl', required : false),
-    ]
-  )
+  if llvm_dep.found()
+    name = static ? 'static' : 'dynamic'
+    executable(
+      'sum-@0@'.format(name),
+      'sum.c',
+      dependencies : [
+        llvm_dep, dep_tinfo,
+        dependency('zlib'),
+        meson.get_compiler('c').find_library('dl', required : false),
+      ]
+    )
+  endif
 endforeach
