--- a/test cases/common/135 generated assembly/square-x86.S.in
+++ b/test cases/common/135 generated assembly/square-x86.S.in
@@ -22,7 +22,7 @@ END
 .text
 .globl SYMBOL_NAME(square_unsigned)
 /* Only supported with GAS */
-# if defined(__linux__) || defined(__DragonFLy__)
+# if defined(__linux__) || defined(__DragonFly__) || defined(__FreeBSD__)
 .type  square_unsigned,@function
 # endif
 
