--- a/test cases/windows/13 resources with custom targets/res/meson.build
+++ b/test cases/windows/13 resources with custom targets/res/meson.build
@@ -2,12 +2,17 @@ win = import('windows')
 
 rc_writer = find_program('./gen-res.py')
 
-rc_target = custom_target('RC source file',
-    input : 'myres.rc.in',
-    output : 'myres.rc',
-    command : [rc_writer, '@INPUT@', '@OUTPUT@', files('sample.ico')],
-    install : false,
-    build_always : true)
+rc_sources = []
 
-res = win.compile_resources(rc_target,
-  include_directories : inc)
+foreach id : [1, 2]
+    rc_sources += custom_target('RC source file @0@'.format(id),
+        input : 'myres.rc.in',
+        output : 'myres_@0@.rc'.format(id),
+        command : [rc_writer, '@INPUT@', '@OUTPUT@', files('sample.ico')],
+        install : false,
+        build_always : true)
+endforeach
+
+rc_sources += files('myres_static.rc')
+
+res = win.compile_resources(rc_sources)
