tests: fix "135 generated assembly" test on NetBSD
Which has GCC and uses GAS.

--- a/test cases/common/135 generated assembly/square-arm.S.in
+++ b/test cases/common/135 generated assembly/square-arm.S.in
@@ -3,7 +3,7 @@
 .text
 .globl SYMBOL_NAME(square_unsigned)
 /* Only supported with GAS */
-# if defined(__linux__) || defined(__DragonFly__) || defined(__FreeBSD__)
+# if defined(__linux__) || defined(__DragonFly__) || defined(__FreeBSD__) || defined(__NetBSD__)
 .type	square_unsigned,%function
 #endif
 
