--- a/test cases/common/135 generated assembly/square-x86_64.S.in
+++ b/test cases/common/135 generated assembly/square-x86_64.S.in
@@ -19,7 +19,7 @@ END
 .text
 .globl SYMBOL_NAME(square_unsigned)
 /* Only supported with GAS */
-# if defined(__linux__) || defined(__DragonFly__) || defined(__FreeBSD__)
+# if defined(__linux__) || defined(__DragonFly__) || defined(__FreeBSD__) || defined(__NetBSD__)
 .type  square_unsigned,@function
 # endif
 
