--- a/test cases/unit/20 warning location/meson.build
+++ b/test cases/unit/20 warning location/meson.build
@@ -1,6 +1,10 @@
-project('duplicate kwarg', 'c')
+project('warning location', 'c')
 a = library('liba', 'a.c')
 b = library('libb', 'b.c')
 executable('main', 'main.c', link_with: a, link_with: b)
 subdir('sub')
 warning('a warning of some sort')
+import('unstable-simd')
+
+conf_data = configuration_data()
+configure_file(input: 'conf.in' , output: 'conf', configuration: conf_data)
