--- a/test cases/common/173 return_to_parent_dir/meson.build
+++ b/test cases/common/173 return_to_parent_dir/meson.build
@@ -1,9 +1,9 @@
 # Should run, even though main.cpp does not exist and we call error in the last line.
-# skip_rest jumps to end, so both lines are not executed.
+# return_to_parent_dir jumps to end, so both lines are not executed.
 
 project('example exit', 'cpp')
 
-skip_rest()
+return_to_parent_dir()
 
 executable('main', 'main.cpp')
 error('Unreachable')
