Removed two deprecations from 2016.

--- a/test cases/common/90 identical target name in subproject/meson.build
+++ b/test cases/common/90 identical target name in subproject/meson.build
@@ -3,4 +3,4 @@ project('toplevel bar', 'c')
 subproject('foo')
 
 executable('bar', 'bar.c')
-run_target('nop', 'true')
+run_target('nop', command : ['true'])
