--- a/test cases/common/174 dependency factory/meson.build
+++ b/test cases/common/174 dependency factory/meson.build
@@ -4,3 +4,13 @@ dep = dependency('gl', method: 'pkg-config', required: false)
 if dep.found() and dep.type_name() == 'pkgconfig'
   dep.get_pkgconfig_variable('prefix')
 endif
+
+dep = dependency('SDL2', method: 'pkg-config', required: false)
+if dep.found() and dep.type_name() == 'pkgconfig'
+  dep.get_pkgconfig_variable('prefix')
+endif
+
+dep = dependency('SDL2', method: 'config-tool', required: false)
+if dep.found() and dep.type_name() == 'configtool'
+  dep.get_configtool_variable('prefix')
+endif
