Add elide_directory keyword for install_subdir() function
If elide_directory=true install_subdir() installs directory contents
instead of directory itself, eliding name of the source directory.

Closes #2869.

--- a/test cases/common/66 install subdir/meson.build
+++ b/test cases/common/66 install subdir/meson.build
@@ -11,3 +11,7 @@ subdir('subdir')
 # and read-list perms for owner and group
 install_subdir('sub1', install_dir : 'share', install_mode : ['rwxr-x--t', 'root'])
 install_subdir('sub/sub1', install_dir : 'share')
+
+# elide_directory
+install_subdir('sub_elided', install_dir : 'share', elide_directory : true)
+install_subdir('nested_elided/sub', install_dir : 'share', elide_directory : true)
