--- a/test cases/rust/4 polyglot/meson.build
+++ b/test cases/rust/4 polyglot/meson.build
@@ -1,5 +1,5 @@
 project('rust and c polyglot executable', 'c', 'rust')
 
-l = library('stuff', 'stuff.rs', install : true)
+l = library('stuff', 'stuff.rs', rust_crate_type: 'cdylib', install : true)
 e = executable('prog', 'prog.c', link_with : l, install : true)
 test('polyglottest', e)
