--- a/test cases/common/66 install subdir/subdir/meson.build
+++ b/test cases/common/66 install subdir/subdir/meson.build
@@ -2,4 +2,4 @@ install_subdir('sub1', install_dir : 'share',
   # This mode will be overridden by the mode set in the outer install_subdir
   install_mode : 'rwxr-x---')
 
-install_subdir('sub_elided', install_dir : 'share', elide_directory : true)
+install_subdir('sub_elided', install_dir : 'share', strip_directory : true)
