Skip test cases/frameworks/20 cups if cups not found

--- a/test cases/frameworks/20 cups/meson.build
+++ b/test cases/frameworks/20 cups/meson.build
@@ -1,6 +1,10 @@
 project('cups test', 'c')
 
-cups_dep = dependency('cups', version : '>=1.4')
+cups_dep = dependency('cups', version : '>=1.4', required: false)
+
+if not cups_dep.found()
+  error('MESON_SKIP_TEST cups not found.')
+endif
 
 e = executable('cups_prog', 'cups_prog.c', dependencies : cups_dep)
 
