--- a/test cases/frameworks/16 sdl2/meson.build
+++ b/test cases/frameworks/16 sdl2/meson.build
@@ -1,6 +1,10 @@
 project('sdl2 test', 'c')
 
-sdl2_dep = dependency('sdl2', version : '>=2.0.0')
+sdl2_dep = dependency('sdl2', version : '>=2.0.0', required: false)
+
+if not sdl2_dep.found()
+  error('MESON_SKIP_TEST sdl2 not found.')
+endif
 
 e = executable('sdl2prog', 'sdl2prog.c', dependencies : sdl2_dep)
 
