Skip test cases/frameworks/1 boost if boost not found

--- a/test cases/frameworks/1 boost/meson.build
+++ b/test cases/frameworks/1 boost/meson.build
@@ -5,6 +5,11 @@ add_project_arguments(['-DBOOST_LOG_DYN_LINK'],
   language : 'cpp'
 )
 
+dep = dependency('boost', required: false)
+if not dep.found()
+  error('MESON_SKIP_TEST boost not found.')
+endif
+
 # We want to have multiple separate configurations of Boost
 # within one project. The need to be independent of each other.
 # Use one without a library dependency and one with it.
