tests/15 mixed pch: Use current style

--- a/test cases/common/15 mixed pch/meson.build
+++ b/test cases/common/15 mixed pch/meson.build
@@ -1,6 +1,9 @@
 project('mixed C and C++ pch test', 'cpp', 'c')
 
 
-exe = executable('prog', 'main.cc', 'func.c',
-c_pch : ['pch/func.h', 'pch/func_pch.c'],
-cpp_pch : ['pch/main_pch.cc', 'pch/main.h'])
+exe = executable(
+  'prog',
+  files('main.cc', 'func.c'),
+  c_pch : ['pch/func.h', 'pch/func_pch.c'],
+  cpp_pch : ['pch/main_pch.cc', 'pch/main.h'],
+)
