--- a/test cases/common/145 whole archive/exe/meson.build
+++ b/test cases/common/145 whole archive/exe/meson.build
@@ -1,2 +1,1 @@
-exe = executable('prog', '../prog.c',
-  link_with : dylib)
+exe = executable('prog', '../prog.c', link_with : sh_func2_linked_func1)
