--- a/test cases/common/145 whole archive/meson.build
+++ b/test cases/common/145 whole archive/meson.build
@@ -10,15 +10,23 @@ if cc.get_id() == 'msvc'
   endif
 endif
 
-subdir('allofme')
-subdir('shlib')
+# Test 1: link_whole keeps all symbols
+# Make static func1
+subdir('st_func1')
+# Make shared func2 linking whole func1 archive
+subdir('sh_func2_linked_func1')
+# Link exe with shared library only
 subdir('exe')
-
+# Test that both func1 and func2 are accessible from shared library
 test('prog', exe)
 
-# link_whole only
-subdir('stlib')
-subdir('wholeshlib')
+# Test 2: link_whole can be used instead of source list, see #2180
+# Make static func2
+subdir('st_func2')
+# Link both func1 and func2 into same shared library
+# which does not have any sources other than 2 static libraries
+subdir('sh_only_link_whole')
+# Link exe2 with shared library only
 subdir('exe2')
-
+# Test that both func1 and func2 are accessible from shared library
 test('prog2', exe2)
