add support for cmakedefine in configure_file()
The added format argument for configure_file allows to specify the kind of
file that is treated. It defaults to 'meson', but can also have the 'cmake'
or 'cmake@' value to treat config.h.in files in the cmake format with #cmakedefine
statements.

--- a/test cases/common/16 configure file/meson.build
+++ b/test cases/common/16 configure file/meson.build
@@ -137,3 +137,15 @@ cfile = configure_file(input : 'config.h.in',
   output : 'do_not_get_installed.h',
   install_dir : '',
   configuration : conf)
+
+# Test escaping with cmake format
+conf7 = configuration_data()
+conf7.set('var1', 'foo')
+conf7.set('var2', 'bar')
+configure_file(
+  input : 'config7.h.in',
+  output : '@BASENAME@',
+  format : 'cmake',
+  configuration : conf7
+)
+test('test7', executable('prog7', 'prog7.c'))
