Add library with generated_pc and PkgConfigDependency support to pkgconfig.generate()

--- a/test cases/common/51 pkgconfig-gen/meson.build
+++ b/test cases/common/51 pkgconfig-gen/meson.build
@@ -46,3 +46,9 @@ pkgg.generate(
   description : 'A foo library.',
   variables : ['foo=bar', 'datadir=${prefix}/data']
 )
+
+pkgg.generate(
+  name : 'libhello',
+  description : 'A minimalistic pkgconfig file.',
+  version : libver,
+)
