--- a/test cases/csharp/4 pkgconfig/meson.build
+++ b/test cases/csharp/4 pkgconfig/meson.build
@@ -1,6 +1,11 @@
 project('C# pkg-config', 'cs')
 
-nunit_dep = dependency('nunit')
+nunit_dep = dependency('nunit', required : false)
+
+if not nunit_dep.found()
+  error('MESON_SKIP_TEST nunit not found.')
+endif
+
 nunit_runner = find_program('nunit-console')
 
 test_lib = library('test_lib', 'test-lib.cs', dependencies: nunit_dep)
