Make gtkdoc test pass on Debian unstable.

--- a/test cases/frameworks/10 gtk-doc/include/meson.build
+++ b/test cases/frameworks/10 gtk-doc/include/meson.build
@@ -13,4 +13,5 @@ generate_enums_docbook = find_program('generate-enums-docbook.py')
 
 docbook = custom_target('enum-docbook',
   output : 'bar.xml',
-  command : [generate_enums_docbook, '@OUTPUT@', 'BAR', 'BAR_TYPE', 'BAR_FOO'])
+  command : [generate_enums_docbook, '@OUTPUT@', 'BAR', 'BAR_TYPE', 'BAR_FOO'],
+  build_by_default : true)
