Skip whole_archive test for VS older than 2015

--- a/test cases/common/180 generator link whole/meson.build
+++ b/test cases/common/180 generator link whole/meson.build
@@ -1,5 +1,12 @@
 project('generator link_whole', 'c')
 
+cc = meson.get_compiler('c')
+if cc.get_id() == 'msvc'
+  if cc.version().version_compare('<19')
+    error('MESON_SKIP_TEST link_whole only works on VS2015 or newer.')
+  endif
+endif
+
 # This just generates foo.h and foo.c with int foo() defined.
 gen_py = find_program('generator.py')
 gen = generator(gen_py,
