--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install gtk-sharp2 gtk-sharp2-gapi libglib2.0-cil-dev \
 && apt-get -y install libwmf-dev \
 && apt-get -y install qt4-linguist-tools qttools5-dev-tools \
+&& apt-get -y install python-dev \
 && python3 -m pip install hotdoc codecov
 
 ENV LANG='C.UTF-8'
