travis.yml: Try to fix brew error:
Error: Refusing to uninstall /usr/local/Cellar/python/2.7.14
because it is required by mercurial 4.4, which is currently installed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ services:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall python mercurial; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew uninstall mercurial python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python@2 python@3 mercurial qt; fi
   # Test against a real gcc too
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CC" == "gcc" ]]; then brew install --only-dependencies gcc; fi
