pkgconfig generator: Add support for Requires.internal
This introduce a few changes:

- Do not differentiate StaticLibrary and SharedLibrary anymore, it was
made only has a temporary hack around the lack of Requires.internal
support in pkg-config.

- CFLAGS from a Dependency passed to libraries_private are now added
into the pc file to respect the same semantic than pkg-config's
Requires.private.

- Dependencies pulled from Library objects are added as internal by
default. It means that if they are Dependency objects their CFLAGS won't
be added. If they are PkgConfigDependency objectsthey are still added to
Requires.private until we can depend on a version of pkg-config that
supports Requires.internal.

--- a/test cases/common/51 pkgconfig-gen/dependencies/meson.build
+++ b/test cases/common/51 pkgconfig-gen/dependencies/meson.build
@@ -26,7 +26,7 @@ custom2_dep = declare_dependency(link_args : ['-lcustom2'], compile_args : ['-DC
 # - We generated a pc file for libexposed so it should be in Requires instead of Libs
 # - Having threads_dep in libraries should add '-pthread' in both Libs and Cflags
 # - Having custom_dep in libraries and libraries_private should only add it in Libs
-# - Having custom2_dep in libraries_private should not add its Cflags
+# - Having custom2_dep in libraries_private should add its Cflags
 # - Having pc_dep in libraries_private should add it in Requires.private
 # - notfound_dep is not required so it shouldn't appear in the pc file.
 pkgg.generate(libraries : [main_lib, exposed_lib, threads_dep , custom_dep],
