Disable b_ndebug tests on MSVC

--- a/test cases/common/186 ndebug if-release disabled/meson.build
+++ b/test cases/common/186 ndebug if-release disabled/meson.build
@@ -4,4 +4,8 @@ project('ndebug disabled', 'c',
           'b_ndebug=if-release',
         ])
 
+if meson.get_compiler('c').get_id() == 'msvc'
+  error('MESON_SKIP_TEST b_ndebug is not supported on Visual Studio')
+endif
+
 test('exe', executable('main', 'main.c'))
