--- a/test cases/common/185 ndebug if-release enabled/meson.build
+++ b/test cases/common/185 ndebug if-release enabled/meson.build
@@ -4,4 +4,8 @@ project('ndebug enabled', 'c',
           'b_ndebug=if-release',
         ])
 
+if meson.get_compiler('c').get_id() == 'msvc'
+  error('MESON_SKIP_TEST b_ndebug is not supported on Visual Studio')
+endif
+
 test('exe', executable('main', 'main.c'))
