pkgconfig generator: Add required version

--- a/test cases/common/51 pkgconfig-gen/dependencies/meson.build
+++ b/test cases/common/51 pkgconfig-gen/dependencies/meson.build
@@ -14,7 +14,7 @@ pkgg.generate(libraries : exposed_lib,
 )
 
 # Declare a few different Dependency objects
-pc_dep = dependency('libfoo')
+pc_dep = dependency('libfoo', version : '>=1.0')
 notfound_dep = dependency('notfound', required : false)
 threads_dep = dependency('threads')
 custom_dep = declare_dependency(link_args : ['-lcustom'], compile_args : ['-DCUSTOM'])
