--- a/test cases/common/188 subdir_done/meson.build
+++ b/test cases/common/188 subdir_done/meson.build
@@ -1,9 +1,9 @@
 # Should run, even though main.cpp does not exist and we call error in the last line.
-# return_to_parent_dir jumps to end, so both lines are not executed.
+# subdir_done jumps to end, so both lines are not executed.
 
 project('example exit', 'cpp')
 
-return_to_calling_dir()
+subdir_done()
 
 executable('main', 'main.cpp')
 error('Unreachable')
