Skipping tests 22, 64, and 132 for old lcc and icc. This is due to incorrect creation of dependency files: both compilers do not escape spaces in paths. As of version 1.21.22 of lcc, it is announced that this bug will be corrected in future versions. Test 132 was a template for such idea; it has been also extended to react not only to icc, but to lcc too.
Further info (if I'm correct):
https://software.intel.com/en-us/forums/intel-c-compiler/topic/283156

--- a/test cases/common/64 custom header generator/meson.build
+++ b/test cases/common/64 custom header generator/meson.build
@@ -1,5 +1,15 @@
 project('custom header generator', 'c')
 
+cc_id  = meson.get_compiler('c').get_id()
+cc_ver = meson.get_compiler('c').version()
+
+if cc_id == 'intel' or (cc_id == 'lcc' and cc_ver.version_compare('<=1.21.22')
+  # ICC and LCC <= 1.21.22 do not escape spaces in paths in the dependency file, so Ninja
+  # (correctly) thinks that the rule has multiple outputs and errors out:
+  # 'depfile has multiple output paths'
+  error('MESON_SKIP_TEST: Skipping test because your compiler is known to generate broken dependency files')
+endif
+
 gen = find_program('makeheader.py')
 
 generated_h = custom_target('makeheader.py',
