[Qt module] More qrc fixes
When several qrc files are given all qrc files dependencies were mixed.
Fixed non working use case:
	When user try to guess build dir layout and add use a relative
	path between a generated qrc file and a generated resource.

Signed-off-by: Alexis Jeandet <alexis.jeandet@member.fsf.org>

--- a/test cases/frameworks/4 qt/subfolder/meson.build
+++ b/test cases/frameworks/4 qt/subfolder/meson.build
@@ -10,6 +10,9 @@ cfg = configuration_data()
 
 cfg.set('filepath', meson.current_source_dir()+'/../thing2.png')
 cfg.set('txt_resource', txt_resource.full_path())
+# here we abuse the system by guessing build dir layout
+cfg.set('txt_resource2', 'txt_resource.txt')
+
 
 rc_file = configure_file(
   configuration : cfg,
