--- a/test cases/frameworks/4 qt/subfolder/resources/stuff4.qrc.in
+++ b/test cases/frameworks/4 qt/subfolder/resources/stuff4.qrc.in
@@ -3,5 +3,6 @@
   <qresource>
       <file alias="thing4.png">@filepath@</file>
       <file alias="txt_resource.txt">@txt_resource@</file>
+      <file alias="txt_resource2.txt">@txt_resource2@</file>
   </qresource>
 </RCC>
